--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework:spring-jdbc'
+	runtimeOnly('com.h2database:h2:2.1.214')
+	implementation 'com.zaxxer:HikariCP'
+
 //	implementation ('org.springframework.boot:spring-boot-starter-web'){
 //		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
 //	}
